--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,7 @@ License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.7), pedtools, ribd, partitions
 LinkingTo: Rcpp
 RoxygenNote: 7.1.2
+Suggests: 
+    rmarkdown,
+    knitr
+VignetteBuilder: knitr
