--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Authors@R:
            comment = c(ORCID = "0000-0003-3323-6733")))
 Description: The number of distinct alleles observed in a DNA mixture is informative of the number of contributors to the mixture. The package provides methods for computing the probability distribution of the number of distinct alleles in a mixture for a given set of allele frequencies. The mixture contributors may be related according to a provided pedigree.
 License: GPL (>= 2)
+Encoding: UTF-8
 Imports: Rcpp (>= 1.0.7), pedtools, ribd, partitions
 LinkingTo: Rcpp
 RoxygenNote: 7.1.2
@@ -19,3 +20,4 @@ Suggests:
     testthat (>= 3.0.0)
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
