Adds var.pf function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,15 @@
 
 S3method(mean,pf)
 S3method(plot,pf)
+S3method(var,pf)
 export(expected_number_of_distinct_alleles)
 export(pr_independent_alleles)
 export(pr_independent_alleles_ped)
 export(pr_number_of_distinct_alleles)
 export(pr_total_number_of_distinct_alleles)
 export(read_allele_freqs)
+export(var)
 export(variance_number_of_distinct_alleles)
+import(methods)
 importFrom(Rcpp,evalCpp)
 useDynLib(numberofalleles)
