Adds MAC and simulation methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(estimate_pr_number_of_distinct_alleles)
 export(expected_number_of_distinct_alleles)
 export(pr_independent_alleles)
 export(pr_independent_alleles_ped)
+export(pr_max_number_of_distinct_alleles)
 export(pr_number_of_distinct_alleles)
 export(pr_total_number_of_distinct_alleles)
 export(read_allele_freqs)
